# Maze-game

./: .gitignore  CMakeLists.txt  README.md  build  calculate_floor_distance.cpp  clean_renderer.cpp  compile  create_maze  create_renderer.cpp  create_window.cpp  draw_floor.cpp  draw_maze.cpp  draw_rays_on_map.cpp  draw_sky.cpp  game_running.cpp  game_won_screen.cpp  gameloop.cpp  is_wall.cpp  loadFloor.cpp  load_floor_texture.cpp  load_sky_texture.cpp  load_wall_texture.cpp  main.cpp  main.h  maze  move.cpp  player.cpp  ray_casting.cpp  sdl_init.cpp  welcome_screen.cpp  window.cpp  wrap_angle.cpp
src/: Maze  calculate_floor_distance.c  calculate_ray_distance.c  calculate_ray_distance.cpp  clean_renderer.c  clear_renderer.c  create_renderer.c  create_renderer.cpp  create_window.c  create_window.cpp  draw_floor.c  draw_maze.c  draw_rays_on_map.c  draw_wall.c  draw_wall.cpp  game_running.c  game_running.cpp  game_won_screen.c  game_won_screen.cpp  is_wall.c  loadFloor.c  loadFloor.cpp  load_floor_texture.c  load_floor_texture.cpp  load_sky_texture.c  load_wall_texture.c  main.c  main.cpp  main.h  move.c  move.cpp  ray_casting.c  ray_casting.cpp  sdl_init.c  update_floor_scroll.c  update_floor_scroll.cpp  update_ray_angle.c  update_ray_angle.cpp  welcome_screen.c  welcome_screen.cpp  (+1 more)
